--- a/src/PrivateAdmin/src/app/administration/api-clients/dashboard/dashboard.component.scss
+++ b/src/PrivateAdmin/src/app/administration/api-clients/dashboard/dashboard.component.scss
@@ -1,9 +1,5 @@
-.allowedMethods {
-    & .allowedMethod:not(:last-child) {
-        &:after {
-            content: ', ';
-        }
-    }
+.allowedMethods .allowedMethod:not(:last-child):after {
+    content: ", ";
 }
 
 p {
