--- a/src/PrivateAdmin/src/app/administration/home-dashboard/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/home-dashboard/dashboard/dashboard.component.html
@@ -1,37 +1,37 @@
-<div class="row mt-2 ms-0 me-0">
-    <div class="col-md-8">
+<div class="row ms-0 me-0">
+    <div class="col-md-8 mt-2">
         <app-common-info></app-common-info>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mt-2">
         <app-active-operations></app-active-operations>
     </div>
 </div>
 
-<div class="row mt-2 ms-0 me-0">
-    <div class="col-md-4">
+<div class="row ms-0 me-0">
+    <div class="col-md-4 mt-2">
         <app-api-requests #apiV1 [apiGroup]="'V1'"></app-api-requests>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mt-2">
         <app-api-requests #apiV2 [apiGroup]="'V2'"></app-api-requests>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mt-2">
         <app-commands></app-commands>
     </div>
 </div>
 
-<div class="row mt-2 ms-0 me-0">
-    <div class="col-md-4">
+<div class="row ms-0 me-0">
+    <div class="col-md-4 mt-2">
         <app-operation-stats></app-operation-stats>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mt-2">
         <app-jobs></app-jobs>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 mt-2">
         <app-today-avg-times></app-today-avg-times>
     </div>
 </div>
