--- a/src/PrivateAdmin/src/app/administration/services/service-info/service-info.component.html
+++ b/src/PrivateAdmin/src/app/administration/services/service-info/service-info.component.html
@@ -22,8 +22,8 @@
                     </div>
                 </div>
 
-                <div class="row mt-3">
-                    <div class="col-md">
+                <div class="row">
+                    <div class="col-md mt-2">
                         <h5 class="fw-normal">Požadavky</h5>
                         <table class="table table-sm table-responsive auto-column-width">
                             <thead>
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md"
+                        <div class="col-md mt-2"
                             *ngIf="(data.diagnosticInfo.operations && data.diagnosticInfo.operations.length > 0) || statusInfoRequest$">
                             <ng-container *ngIf="data.diagnosticInfo.operations && data.diagnosticInfo.operations.length > 0">
                                 <h5>Operace</h5>
@@ -97,7 +97,7 @@
                             </ng-container>
                         </div>
 
-                        <div class="col-md"
+                        <div class="col-md mt-2"
                             *ngIf="data.diagnosticInfo.databaseStatistics && data.diagnosticInfo.databaseStatistics.length > 0">
                             <h5 class="fw-normal">Databáze</h5>
                             <table class="table table-sm table-responsive auto-column-width">
