--- a/src/PrivateAdmin/src/app/administration/statistics/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/statistics/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
         <ng-container *ngTemplateOutlet="menuItem;context:{name:'Průměrné časy',url:'./avgTimes',id:'avgTimes'}"></ng-container>
         <ng-container *ngTemplateOutlet="menuItem;context:{name:'Operace',url:'./operations',id:'operations'}"></ng-container>
     </div>
-    <div class="col-md-9 border pt-3 rounded h-100" style="max-width: 74%;">
+    <div class="col-md-9 border pt-3 mt-3 rounded h-100" style="max-width: 74%;">
         <router-outlet></router-outlet>
     </div>
 </div>
