--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
@@ -2,22 +2,22 @@
     [footer]="allowExtendedFilters ? {template:extendedFilters, context:null} : null">
     <form [formGroup]="form">
         <div class="row">
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>ID záznamů (oddělovat čárkou)</label>
                 <input type="text" formControlName="serializedIds" class="form-control" />
             </div>
 
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Server</label>
                 <app-search-input [searchSource]="'guilds'" formControlName="guildId"></app-search-input>
             </div>
 
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Kanál</label>
                 <app-search-input [searchSource]="'channels'" [guildId]="guildId" formControlName="channelId"></app-search-input>
             </div>
 
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Uživatel</label>
                 <app-search-input [searchSource]="'users'" formControlName="userIds" [isMultiSelect]="true"
                     [guildId]="guildId"></app-search-input>
@@ -25,23 +25,23 @@
         </div>
 
         <div class="row">
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Zapsáno od</label>
                 <input type="datetime-local" class="form-control" formControlName="createdFrom" />
             </div>
 
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Zapsáno do</label>
                 <input type="datetime-local" class="form-control" formControlName="createdTo" />
             </div>
 
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Typy operací (k zobrazení)</label>
                 <ng-select [bindValue]="'key'" [bindLabel]="'value'" [closeOnSelect]="false" [clearable]="true" [items]="types"
                     [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true" formControlName="showTypes"></ng-select>
             </div>
 
-            <div class="col form-group">
+            <div class="col-md form-group">
                 <label>Typy operací (k vynechání)</label>
                 <ng-select [bindValue]="'key'" [bindLabel]="'value'" [closeOnSelect]="false" [clearable]="true" [items]="types"
                     [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true" formControlName="ignoreTypes"></ng-select>
