--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.scss
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.scss
@@ -3,3 +3,9 @@
     grid-template-columns: 1fr 1fr;
     gap: 5px 20px;
 }
+
+@media (max-width: 500px) {
+    .extended-filter-grid {
+        grid-template-columns: 1fr;
+    }
+}
