--- a/src/PrivateAdmin/src/app/administration/guilds/guild-list/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/guilds/guild-list/filter/filter.component.html
@@ -1,13 +1,13 @@
 <app-card [title]="'Vyhledávání'" [icon]="'fas fa-search'" [size]="'md'" [allowHideButton]="true">
     <form [formGroup]="form" class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="form-group">
                 <label>Vyhledávání v názvu</label>
                 <input type="text" formControlName="nameQuery" class="form-control" />
             </div>
         </div>
 
-        <div class="col d-flex align-items-end justify-content-end">
+        <div class="col-md d-flex align-items-end justify-content-end mt-2">
             <button class="btn btn-link me-2" type="button" (click)="submitForm()">Obnovit</button>
             <button class="btn btn-danger" (click)="cleanFilter()" type="button">Smazat filtr</button>
         </div>
