--- a/src/PrivateAdmin/src/app/administration/invites/service-operations/service-operations.component.html
+++ b/src/PrivateAdmin/src/app/administration/invites/service-operations/service-operations.component.html
@@ -1,7 +1,7 @@
 <app-navigation [navigation]="navigation"></app-navigation>
 
 <div class="row mt-3 ms-0 me-0">
-    <div class="col-4">
+    <div class="col-md-4">
         <app-card [title]="'Metadata'">
             <div class="d-flex justify-content-between">
                 Aktuálně je v cache záznamů: {{metadataCount | async}}
