--- a/src/PrivateAdmin/src/app/administration/points/transactions/charts/charts.component.html
+++ b/src/PrivateAdmin/src/app/administration/points/transactions/charts/charts.component.html
@@ -1,7 +1,7 @@
 <app-navigation [navigation]="navigation"></app-navigation>
 
-<div class="row mt-3 ms-0 me-0 pb-3">
-    <div class="col-md">
+<div class="row ms-0 me-0 pb-3">
+    <div class="col-md mt-3">
         <app-card [title]="'Platné transakce'" [icon]="'fa-comments fas'">
             <ng-container *ngIf="nonMerged.loaded">
                 <h5>Zprávy</h5>
@@ -16,7 +16,7 @@
         </app-card>
     </div>
 
-    <div class="col-md">
+    <div class="col-md mt-3">
         <app-card [title]="'Expirované transakce'" [icon]="'fa-comments fas'">
             <ng-container *ngIf="merged.loaded">
                 <h5>Zprávy</h5>
