--- a/src/PrivateAdmin/src/app/administration/unverify/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/unverify/list/list.component.html
@@ -4,7 +4,7 @@
 
         <ng-container *ngIf="list.isDataLoaded">
             <div class="row">
-                <div class="col">
+                <div class="col-md">
                     <table class="table table-bordered table-sm no-print">
                         <thead>
                             <tr>
@@ -31,7 +31,7 @@
 
             <app-card *ngFor="let item of list.items" [header]="false" [classes]="['mb-3']">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md">
                         <div class="row">
                             <div class="col">
                                 <h6>
@@ -42,7 +42,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col">
+                            <div class="col-md">
                                 <p class="m-0">
                                     Server: <b><a routerLink="/admin/servers/{{item.guild.id}}"
                                             class="text-dark">{{item.guild.name}}</a></b>
@@ -57,7 +57,7 @@
                                 </p>
                             </div>
 
-                            <div class="col" *ngIf="item.anyData">
+                            <div class="col-md" *ngIf="item.anyData">
                                 <ng-container *ngIf="item.setData">
                                     <p class="m-0">Začátek: <b>{{item.setData.start.binding}}</b></p>
                                     <p class="m-0">Konec: <b>{{item.setData.end.binding}}</b></p>
@@ -72,7 +72,7 @@
                         </div>
 
                         <div class="row mt-2" *ngIf="item.anyData">
-                            <div class="col">
+                            <div class="col-md">
                                 <ng-container *ngIf="item.setData">
                                     <ng-container *ngIf="item.setData.rolesToKeep && item.setData.rolesToKeep.length > 0">
                                         <h5>Ponechané role</h5>
@@ -131,7 +131,7 @@
 
                     <div class="col-2 d-flex justify-content-end no-print" *ngIf="item.isUnverify">
                         <div class="row mt-2">
-                            <div class="col">
+                            <div class="col-md">
                                 <button class="btn btn-outline-success" (click)="recoverState(item)">Obnovit stav</button>
                             </div>
                         </div>
