--- a/src/PrivateAdmin/src/app/shared/navigation/navigation.component.html
+++ b/src/PrivateAdmin/src/app/shared/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="row ms-0 me-0 mt-2">
-    <div class="col-2" *ngFor="let item of navigation.getItems()">
+    <div class="col-md-2" *ngFor="let item of navigation.getItems()">
         <a [routerLink]="item.routerLink" [title]="item.title" class="menu-link" [class.active]="navigation.isActive(item)">
             <img *ngIf="item.icon && item.iconAsImg" [src]="item.icon" [alt]="item.label">
             <i [class]="item.icon" *ngIf="item.icon && !item.iconAsImg"></i>
