Fixed text wrapping in the karma web

--- a/src/KarmaWeb/src/app/pagination/pagination.component.html
+++ b/src/KarmaWeb/src/app/pagination/pagination.component.html
@@ -2,7 +2,7 @@
     <button [disabled]="disabled('first')" (click)="click('first')">První strana</button>
     <button [disabled]="disabled('prev')" (click)="click('prev')">Předchozí strana</button>
 
-    <span>
+    <span class="text-nowrap">
         {{page}} / {{pageCount}}
     </span>
 
