--- a/src/PrivateAdmin/src/app/administration/emotes/emotes-list/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/emotes/emotes-list/list/list.component.html
@@ -23,6 +23,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Název</th>
+                        <th>Server</th>
                         <th>Počet použití</th>
                         <th>První výskyt</th>
                         <th>Poslední výskyt</th>
@@ -34,6 +35,9 @@
                     <tr *ngFor="let item of list.items">
                         <td>{{item.emote.id}}</td>
                         <td>{{item.emote.name}}</td>
+                        <td>
+                            <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark">{{item.guild.name}}</a>
+                        </td>
                         <td>{{item.useCount | numberWithSpaces}}</td>
                         <td>{{item.firstOccurence.binding}}</td>
                         <td>{{item.lastOccurence.binding}}</td>
@@ -66,6 +70,9 @@
                             <span>Poprvé: <b>{{item.firstOccurence.binding}}</b></span>
                             <span>Naposledy: <b>{{item.lastOccurence.binding}}</b></span>
                             <span>Použilo (uživatelů): <b>{{item.usedUsersCount | numberWithSpaces}}</b></span>
+                            <span>
+                                Server: <b><a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark">{{item.guild.name}}</a></b>
+                            </span>
                             <div class="d-flex justify-content-between">
                                 <a routerLink="/admin/emotes/{{item.emote.encodedId}}/users" class="text-dark no-print">Seznam uživatelů</a>
                                 <a href="javascript:;" class="text-danger no-print" (click)="removeStats(item)">Smazat statistiku</a>
