New field in the audit log advanced search for API records

--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/api-request-filter/api-request-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/api-request-filter/api-request-filter.component.html
@@ -53,5 +53,13 @@
                 <app-select [items]="apiGroupNames" formControlName="apiGroupName"></app-select>
             </div>
         </div>
+
+        <div class="row mt-2">
+            <div class="col-md-3 d-flex align-items-center">Identifikace</div>
+
+            <div class="col-md">
+                <input type="text" placeholder="Identifikace" class="form-control" formControlName="identification" />
+            </div>
+        </div>
     </form>
 </app-card>
