New design of scheduled jobs page

--- a/src/PrivateAdmin/src/app/administration/jobs/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/jobs/dashboard/dashboard.component.html
@@ -6,40 +6,36 @@
     </div>
 </div>
 
-<ng-container *ngIf="jobs && jobs.length > 0">
-    <div class="row ms-0 me-0 mt-3 mb-3" *ngFor="let job of jobs">
-        <div class="col-md-12">
+<div *ngIf="jobs && jobs.length > 0" class="d-flex flex-md-wrap flex-wrap">
+    <div class="ms-3 me-0 mt-3 mb-3" *ngFor="let job of jobs">
+        <div>
             <ng-container *ngTemplateOutlet="jobCard;context:{job: job}"></ng-container>
         </div>
     </div>
-</ng-container>
+</div>
 
 <ng-template #jobCard let-job="job">
-    <app-card [header]="false" [classes]="[job.running ? 'bg-success' : '']">
-        <div class="d-flex justify-content-start align-items-end">
-            <h4 class="fw-normal me-3">{{job.name}}</h4>
-            <h6 class="badge bg-danger original" *ngIf="!job.isActive">Neaktivní</h6>
+    <app-card [header]="false" [classes]="[job.running ? 'bg-success' : '', !job.isActive ? 'bg-danger' : '']">
+        <h4 class="fw-normal me-3">{{job.name}}</h4>
+
+        <div class="row">
+            <div keyValueItem class="col-md border-bottom mt-2" [key]="'Spuštění'" [value]="job.startCount | numberWithSpaces"></div>
+            <div keyValueItem class="col-md border-bottom mt-2" [key]="'Neúspěšných'" [value]="job.failedCount | numberWithSpaces"></div>
         </div>
 
         <div class="row">
-            <div class="col-md">
-                <p>Počet spuštění: <b>{{job.startCount | numberWithSpaces}}</b></p>
-                <p>Počet chyb: <b>{{job.failedCount | numberWithSpaces}}</b></p>
-                <p>Posl. spuštění: <b>{{(job.lastRun ? job.lastRun.binding : 'Ještě nespuštěn')}}</b></p>
-                <p>Příští spuštění: <b>{{job.nextRun.binding}}</b></p>
-            </div>
-
-            <div class="col-md">
-                <p>Posl. běh: <b>{{job.lastRunDuration | timeDuration}}</b></p>
-                <p>Nejrychlejší běh: <b>{{job.minTime | timeDuration}}</b></p>
-                <p>Nejpomalejší běh: <b>{{job.maxTime | timeDuration}}</b></p>
-            </div>
-
-            <div class="col-md">
-                <p>Celkový čas: <b>{{job.totalTime | timeDuration}}</b></p>
-                <p>Průměrný čas: <b>{{job.averageTime | timeDuration}}</b></p>
-            </div>
+            <div keyValueItem class="col-md border-bottom mt-2" [key]="'Poslední běh'" [value]="job.lastRunDuration | timeDuration"></div>
+            <div keyValueItem class="col-md border-bottom mt-2" [key]="'Průměrný čas'" [value]="job.averageTime | timeDuration"></div>
         </div>
+
+        <div class="row mb-2">
+            <div keyValueItem class="col-md border-bottom mt-2" [key]="'Nejrychlejší'" [value]="job.minTime | timeDuration"></div>
+            <div keyValueItem class="col-md border-bottom mt-2" [key]="'Nejpomalejší'" [value]="job.maxTime | timeDuration"></div>
+        </div>
+
+        <p>Celkový čas: <b>{{job.totalTime | timeDuration}}</b></p>
+        <p>Posl. spuštění: <b>{{(job.lastRun ? job.lastRun.binding : 'Ještě nespuštěn')}}</b></p>
+        <p>Příští spuštění: <b>{{job.nextRun.binding}}</b></p>
 
         <div class="btn-group mt-2 no-print">
             <button class="btn btn-outline-success" title="Spustit úlohu" *ngIf="job.isActive && !job.running" (click)="triggerJob(job)">
@@ -50,7 +46,8 @@
                 <i class="fas fa-power-off"></i>
             </button>
 
-            <button class="btn btn-outline-danger" title="Deaktivovat úlohu" *ngIf="job.isActive && !job.running" (click)="updateJob(job, false)">
+            <button class="btn btn-outline-danger" title="Deaktivovat úlohu" *ngIf="job.isActive && !job.running"
+                (click)="updateJob(job, false)">
                 <i class="fas fa-power-off"></i>
             </button>
         </div>
