--- a/src/PrivateAdmin/src/app/shared/pagination/pagination.component.scss
+++ b/src/PrivateAdmin/src/app/shared/pagination/pagination.component.scss
@@ -4,7 +4,9 @@ div {
     margin-bottom: 10px;
 }
 
-button, span {
+button,
+span,
+input[type=number] {
     color: #0d6efd;
 }
 
@@ -23,8 +25,33 @@ button {
     }
 }
 
-span {
+.page-number {
+    display: flex;
+    align-items: center;
     font-size: 1.2rem;
     margin-left: 15px;
     margin-right: 25px;
+
+    & span {
+        margin-top: -3px;
+    }
+
+    & input[type="number"] {
+        width: 50px;
+        -moz-appearance: textfield;
+        text-align: center;
+        padding: 0;
+        font-size: 1.15rem;
+        margin-right: 10px;
+
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
 }
