--- a/src/KarmaWeb/src/app/pagination/pagination.component.scss
+++ b/src/KarmaWeb/src/app/pagination/pagination.component.scss
@@ -4,8 +4,10 @@ div {
     margin-bottom: 10px;
 }
 
-button, span {
-    color: #7289da;
+button,
+span,
+input[type="number"] {
+    color: #0d6efd;
 }
 
 button {
@@ -23,8 +25,35 @@ button {
     }
 }
 
-span {
+.page-number {
+    display: flex;
+    align-items: center;
     font-size: 25px;
     margin-left: 15px;
     margin-right: 25px;
+
+    & span {
+        margin-top: -3px;
+    }
+
+    & input[type="number"] {
+        width: 50px;
+        -moz-appearance: textfield;
+        text-align: center;
+        padding: 0;
+        font-size: 1.15rem;
+        margin-right: 10px;
+        background: transparent;
+        border-color: #44484e;
+
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
 }
